# satnogs-decoder

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: mirror.yml
satnogs_decoder/data/: __init__.py  build_dataset.py
satnogs_decoder/generate/: __init__.py  build.py  fields.py  headers.py  schema.py
satnogs_decoder/infer/: __init__.py  corpus.py  eval.py  features.py  infer.py  labels.py  layout.py  model.py  qualify.py  review.py  structure.py  training.py
satnogs_decoder/infer/model/: boundary.joblib  enum.joblib  metadata.json  signed.joblib  width.joblib
satnogs_decoder/shared/: __init__.py  kaitai.py  ksy.py  reference.py  satnogs_db.py
satnogs_decoder/validate/: __init__.py  crosscheck.py  engine.py  normalize.py  report.py
scripts/: __init__.py  _harness_audit.py  audit_harness.py  build_corpus.py  build_corpus_db.py  eval_infer.py  find_candidates.py  generate.py  infer.py  spike_gonogo.py  train.py  validate.py
tests/infer/: test_labels.py  test_structure.py  test_training.py
